fixed alignment of location marker

--- a/custom.css
+++ b/custom.css
@@ -41,7 +41,7 @@ html {
   position: absolute;
   right: 15px;
   color: #222;
-  top: 4px;
+  top: 6px;
 }
 
 
